Invoice create and view endpoints added
